--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,49 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.ahmad.mdc">
+    package="com.example.arduinosensors"
+    android:versionCode="1"
+    android:versionName="1.0" >
 
-
-    <uses-permission android:name="android.permission.BLUETOOTH" />
-    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+    <uses-sdk
+        android:minSdkVersion="8"
+        android:targetSdkVersion="17" />
+    <uses-permission android:name="android.permission.BLUETOOTH"/>
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+        android:theme="@style/AppTheme" >
         <activity
-            android:name="com.example.ahmad.mdc.Homescreen"
-            android:configChanges="keyboardHidden|orientation"
-            android:label="@string/app_name" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name="com.example.ahmad.mdc.BluetoothC"
+            android:name="com.example.arduinosensors.MainActivity"
             android:label="@string/app_name"
-            android:configChanges="orientation"
-            android:windowSoftInputMode="adjustResize|stateHidden" >
+            android:screenOrientation="portrait"  >
+
+        </activity>
+        <activity
+            android:name="com.example.arduinosensors.DeviceListActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".About"></activity>
-        <activity android:name=".Settings"></activity>
-        <activity android:name=".Statas"></activity>
-        <activity android:name=".PreferencesActivity"></activity>
-
     </application>
-
-
 
 </manifest>
