--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,25 +12,26 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/untitled"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+
+        >
         <activity
             android:name="com.example.arduinosensors.MainActivity"
-            android:label="@string/app_name"
             android:screenOrientation="portrait"  >
 
         </activity>
         <activity
             android:name="com.example.arduinosensors.DeviceListActivity"
             android:label="@string/app_name"
-            android:screenOrientation="portrait" >
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
     </application>
 
 </manifest>
